--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ JavaCompiler/Operador.class
 JavaCompiler/Parser.class
 JavaCompiler/Soma.class
 JavaCompiler/Parser$1.class
+JavaCompiler/Token.class
